Hid the option to view files in grid mode until server side code to generate thumbnail images in production mode is rectified

--- a/src/app/modules/dashboard/components/repository/repository.component.less
+++ b/src/app/modules/dashboard/components/repository/repository.component.less
@@ -3,12 +3,14 @@
 
 
 .repository-container, .repository-wrapper {
-  height: 100%;
+  height: 92%;
   margin-bottom: 15px;
+  background-color: rgb(255, 255, 255) 
 }
 
 table {
   width: 100%;
+
 }
 
 th, td {
