--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -160,9 +160,9 @@
 
         <input type="file" hidden multiple (change)="uploadData($event)" #uploader>
 
-        <button mat-icon-button class="p-0" [matMenuTriggerFor]="displayMenu">
+        <!-- <button mat-icon-button class="p-0" [matMenuTriggerFor]="displayMenu">
           <mat-icon>list</mat-icon>
-        </button>
+        </button> -->
 
         <button *ngIf="isXS" class="p-0" mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu">
           <mat-icon>more_vert</mat-icon>
@@ -170,14 +170,14 @@
   
         <!-- View Mode Menu -->
 
-        <mat-menu #displayMenu="matMenu">
+        <!-- <mat-menu #displayMenu="matMenu">
           <button (click)="setTableViewState($event, 0)" mat-menu-item>
             <mat-icon class="mr-2">list</mat-icon>List
           </button>
           <button (click)="setTableViewState($event, 1)" mat-menu-item>
             <mat-icon class="mr-2 large-grid">grid_on</mat-icon>Large
           </button>
-        </mat-menu>
+        </mat-menu> -->
   
       </th>
       <td mat-cell *matCellDef="let row">
@@ -200,7 +200,8 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getFolderContents(row)"></tr>
   
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]"></mat-paginator> <!-- [length]="resultsLength" [pageSize]="30" -->
+  <!-- <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]"></mat-paginator>  -->
+  <!-- [length]="resultsLength" [pageSize]="30" -->
 </ng-template>
 
 
